<resources>
    <string name="app_name">Wonderful Film</string>
    <string name="live">Live</string>
    <string name="playback">Reminisce</string>
    <string name="yy_world">Cantonese Play</string>
    <string name="ys_first">Films&#038;TV Series</string>
    <string name="children_dm">Children\'s anime</string>
    <string name="hot_re">Hot Recommendation</string>
    <string name="lg_yy">Blu-ray theater</string>
    <string name="hot_topics">Hot Topic</string>
    <string name="set_mgr">Settings</string>
    <string name="jl_sc">Record/Collection</string>
    <string name="zx_dy">New Movies</string>
    <string name="zx_zj">New Series</string>
    <string name="dy_bl">Cantonese Film</string>
    <string name="rb_jj">Hot Series</string>
    <string name="ty_jj">Sports</string>
    <string name="ml_jl">Documentary</string>
    <string name="zy_bs">Variety Show</string>
    <string name="page_fmt">%1$d/%2$d Page</string>
    <string name="search">Search</string>
    <string name="update_to_ji">Update to %1$s</string>
    <string name="play">Play</string>
    <string name="fav">Favorite</string>
    <string name="unfav">Unfavorite</string>
    <string name="xj">Selection</string>
    <string name="details_press_tips">Press "Menu" button change the sequence</string>
    <string name="movie">Movie</string>
    <string name="jj">Series</string>
    <string name="zy">Variety</string>
    <string name="zt">Topics</string>
    <string name="dy_fmt">Director:\u0020\u0020\u0020%1$s</string>
    <string name="zy_fmt">Actor:\u0020\u0020%1$s</string>
    <string name="lx_fmt">Type:\u0020\u0020\u0020%1$s</string>
    <string name="js_fmt">Episodes:\u0020\u0020%1$s</string>
    <string name="intro">Introduction:\n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020%1$s</string>
    <string name="intro_nospace">Introduction:\n%1$s</string>
    <string name="sedh">Anime</string>
    <string name="egyy">Children\'s Music</string>
    <string name="dmdy">Anime movie</string>
    <string name="dmjj">Anime TV Series</string>
    <string name="xxjy">Education</string>
    <string name="mxzq">Star area</string>
    <string name="xgtj">Recommend</string>
    <string name="sedm_dy_fmt">Director:\u0020\u0020\u0020%1$s</string>
    <string name="sedm_yz_fmt">Author:\u0020\u0020%1$s</string>
    <string name="sedm_dq_fmt">Area:\u0020\u0020%1$s</string>
    <string name="sedm_lx_fmt">Type:\u0020\u0020\u0020%1$s</string>
    <string name="collection_op_tips">Press "Menu" button change the sequence or episode</string>
    <string name="ip_cn_head" translatable="false">您现在的 IP：</string>
    <string name="area_cn_head" translatable="false">所在地理位置：</string>
    <string name="geoip_cn_head" translatable="false">GeoIP: </string>
    <string name="china" translatable="false">CHINA</string>
    <string name="ser_con_err_tips">2002:Server connection failed%s</string>
    <string name="no_net">1002:Network is not connected</string>
    <string name="expired">1003:Expired\n(%s)</string>
    <string name="click_menu_switch">Press "Menu" button change the sequence or episode</string>
    <string-array name="area_arr">
        <item>中国</item>
        <item>CHINA</item>
        <item>澳大利亚</item>
        <item>AUSTRALIA</item>
    </string-array>
    <string-array name="ckind_sort_filter">
        <item>Latest</item>
    </string-array>
    <string name="card_no_hint">CARD NO.</string>
    <string name="card_ps_hint">PASSWORD</string>
    <string name="ok">OK</string>
    <string name="exit">EXIT</string>
    <string name="paying">Recharging, please wait</string>
    <string-array name="yysj_yyxf_pkind_name_arr">
        <item>Cantonese Play</item>
        <item>Films&#038;TV Series</item>
        <item>Blu-ray theater</item>
    </string-array>
    <string-array name="sedm_pkind_name_arr">
        <item>Children\'s anime</item>
    </string-array>
    <string-array name="home_kind_name_arr">
        <item>Live</item>
        <item>Reminisce</item>
        <item>Cantonese Play</item>
        <item>Films&#038;TV Series</item>
        <item>Children\'s anime</item>
        <item>Hot Recommendation</item>
        <item>Blu-ray theater</item>
        <item>Hot Topic</item>
        <item>Settings</item>
    </string-array>
    <string-array name="yysj_kind_name_arr">
        <item>Cantonese Film</item>
        <item>Hot TV Series</item>
        <item>Variety bus</item>
        <item>Newest Film</item>
        <item>Newest TV Series</item>
        <item>Record/Collection</item>
    </string-array>
    <string-array name="yysj_kind_cid_arr">
        <item>29</item>
        <item>32</item>
        <item>33</item>
        <item>442</item>
        <item>444</item>
        <item>fav/history</item>
    </string-array>
    <string-array name="yyxf_kind_name_arr">
        <item>Record/Collection</item>
        <item>Newest Film</item>
        <item>Newest TV Series</item>
        <item>Cantonese Film</item>
        <item>Hot TV Series</item>
        <item>Sports</item>
        <item>Documentary</item>
        <item>Variety Show</item>
    </string-array>
    <string-array name="yyxf_kind_cid_arr">
        <item>fav/history</item>
        <item>438</item>
        <item>440</item>
        <item>30</item>
        <item>34</item>
        <item>36</item>
        <item>31</item>
        <item>35</item>
    </string-array>
    <string-array name="lgyy_kind_name_arr">
        <item>Blu-ray theater</item>
    </string-array>
    <string-array name="lgyy_kind_cid_arr">
        <item>93</item>
    </string-array>
    <string-array name="fav_history_cid_arr">
        <item>MOVIE_FAV</item>
        <item>TOPICS_FAV</item>
        <item>HISTORY</item>
    </string-array>
    <string-array name="fav_history_name_arr">
        <item>Film Collection</item>
        <item>Special Collection</item>
        <item>Recording</item>
    </string-array>
    <string name="fav_history_kind_cid" translatable="false">fav/history</string>
    <string name="end">End</string>
    <string name="press_ok_show_live_list">Press \"OK button\" to show the channel list</string>
    <string name="play_act_title_fmt">%1$s - Episode%2$d</string>
    <string name="set_and_mgr">Settings And Manager</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="sys_update">Update</string>
    <string name="about_us">About Us</string>
    <string-array name="sedm_bottom_name_arr">
        <item>小猪佩奇</item>
        <item>巧虎</item>
        <item>超级飞侠</item>
        <item>汪汪队立大功</item>
        <item>猪猪侠</item>
        <item>海底小纵队</item>
        <item>托马斯和他的朋友们</item>
        <item>熊出没</item>
    </string-array>
    <string-array name="sedm_kind_name_arr">
        <item>Anime</item>
        <item>Children\'s Music</item>
        <item>Education</item>
        <item>Star Area</item>
        <item>Anime movie</item>
        <item>Anime TV Series</item>
    </string-array>
    <string name="yypy">Cantonese Dubbing</string>
    <string name="bfsj">Various World</string>
    <string name="movie_not_exists">The Movie not exists</string>
    <string name="yyzt">Cantonese</string>
    <string name="zhzt">Comprehensive</string>
    <string name="ysys">Diet&#038;health</string>
    <string name="latest_ver">Latest Version</string>
    <string name="clear_over">Clear Over</string>
    <string name="about_all_content">About App\n\nA leading network streaming media player with massive TV content to provide the most outstanding quality video enjoyment.</string>
    <string name="about">About</string>
    <string name="subscription">Subscription</string>
    <string name="mac">Mac</string>
    <string name="version">Version</string>
    <string name="clear_data">Clear cache</string>
    <string name="history_page">History</string>
    <string name="all_kind_name">ALL</string>
    <string name="about_live_content">A leading network streaming media player with massive TV content to provide the most outstanding quality video enjoyment.\n\nVersion: %1$s</string>
    <string name="fav_chal_tips">Want to favorite this channel?</string>
    <string name="unfav_chal_tips">Want to unfavorite this channel?</string>
    <string name="live_epg_now">Now:</string>
    <string name="live_epg_next">Next:</string>
    <string name="invalid_chal_num">Invalid channel number</string>
    <string name="long_time_tips">2004:Are you here?\nPlease enter the number shown in the picture</string>
    <string name="press_back_again">Press back key again exit App</string>
    <string name="net_bad">Network connection failed, check the network</string>
    <string name="category">Category</string>
    <string name="fav_list">Favorite</string>
    <string name="playback_yy">Cantonese</string>
    <string name="playback_dl">Mainland</string>
    <string name="playback_zh">Comprehensive</string>
    <string name="playback_cur_pd">Current channel:</string>
    <string name="playback_cur_jm">Current program:</string>
    <string-array name="playback_week_arr">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
    <string name="playback_week_fmt">MM-dd\nEEEE</string>
    <string-array name="keybord_arr">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="more">More</string>
    <string name="again_back_live">Click again to exit the live stream</string>
    <string name="again_back_playback">Click again to exit the full screen</string>
    <string name="again_back_play">Press back again to exit video</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
</resources>