<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pay_bg"
    android:orientation="vertical">

    <EditText
        android:id="@+id/pay_id_edit_v"
        style="@style/PAY_EDIT_STYLE"
        android:layout_marginTop="60pt"
        android:hint="@string/card_no_hint" />

    <EditText
        android:id="@+id/pay_ps_edit_v"
        style="@style/PAY_EDIT_STYLE"
        android:layout_below="@+id/pay_id_edit_v"
        android:layout_marginTop="40pt"
        android:hint="@string/card_ps_hint"
        android:nextFocusDown="@+id/pay_ok_v" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pay_ps_edit_v"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40pt"
        android:descendantFocusability="afterDescendants">

        <Button
            android:id="@+id/pay_ok_v"
            style="@style/PAY_BTN_STYLE"
            android:text="@string/ok" />

        <Button
            android:id="@+id/pay_exit_v"
            style="@style/PAY_BTN_STYLE"
            android:layout_marginLeft="60pt"
            android:text="@string/exit" />
    </LinearLayout>
</RelativeLayout>